classDiagram
    %% ── Hypothesis Data Models ──
    class FieldCategoryDef {
        +str category
        +str priority
        +list~str~ examples
        +float weight
    }

    class ExpressionFamily {
        +str id
        +str structure
        +str description
        +list~int~ windows
        +list~int~ windows_short
        +list~int~ windows_long
        +float weight
    }

    class FailureMode {
        +str gate
        +str reason
        +str mitigation
    }

    class AdaptationConfig {
        +list~str~ preferred_regions
        +list~str~ preferred_universes
        +list~int~ preferred_delays
        +list~str~ unsuitable_regions
    }

    class Hypothesis {
        +str id
        +str name
        +str category
        +str version
        +Rationale rationale
        +list~FieldCategoryDef~ field_categories
        +list~ExpressionFamily~ expression_families
        +list~FailureMode~ expected_failure_modes
        +AdaptationConfig adaptation
        +ExperienceWeights experience_weights
    }

    class Rationale {
        +str theory
        +list~str~ academic_refs
        +str behavioral_bias
    }

    class ExperienceWeights {
        +float overall
        +dict~str,float~ field_category_weights
        +dict~str,float~ expression_family_weights
        +dict~int,float~ window_weights
    }

    class GenerationMeta {
        +str mode
        +str hypothesis_id
        +str hypothesis_name
        +str expression_family_id
        +str field_category
        +list~str~ selected_fields
        +str region
        +str universe
        +int delay
        +str timestamp
    }

    Hypothesis "1" *-- "1..*" FieldCategoryDef : field_categories
    Hypothesis "1" *-- "2..5" ExpressionFamily : expression_families
    Hypothesis "1" *-- "0..*" FailureMode : expected_failure_modes
    Hypothesis "1" *-- "1" AdaptationConfig : adaptation
    Hypothesis "1" *-- "1" Rationale : rationale
    Hypothesis "1" *-- "1" ExperienceWeights : experience_weights

    %% ── Library ──
    class HypothesisLibrary {
        -Path _directory
        -dict~str,Hypothesis~ _hypotheses
        -dict~str,list~Hypothesis~~ _by_category
        +__init__(directory)
        +load_all() self
        +get_all() list~Hypothesis~
        +get_by_id(hypothesis_id) Hypothesis | None
        +get_by_category(category) list~Hypothesis~
        +get_ids() list~str~
        +update_weights(hypothesis_id, field_cat_weights, expr_fam_weights, window_weights) None
        +reload() self
        +count() int
        -_load_file(path) Hypothesis
        -_validate_weights() None
    }

    HypothesisLibrary "1" -- "*" Hypothesis : manages

    %% ── Generator Components ──
    class GenerationModeRouter {
        -float _hypothesis_ratio
        -float _experience_ratio
        -float _random_ratio
        -int _hypothesis_count
        -int _experience_count
        -int _random_count
        +__init__(ratio_str)
        +route() str
        +reset() None
    }

    class HypothesisSelector {
        -HypothesisLibrary _library
        -set~str~ _recently_used
        +__init__(library)
        +select() Hypothesis
        +exclude_recently_used(max_recency) None
    }

    class ExpressionFamilySelector {
        +__init__()
        +select(hypothesis) ExpressionFamily
        +select_window(expr_family) int
    }

    class FieldSelector {
        -DatasetSelector _selector
        +__init__(selector)
        +select_fields(hypothesis, dataset_id, count) list~str~
        +_resolve_category(category_name, dataset_id) list~str~
    }

    class ContextAdapter {
        +__init__()
        +adapt(hypothesis, available_regions, available_universes) dict
    }

    class HypothesisDrivenGenerator {
        -OfficialDataLoader _loader
        -FieldDatasetMapper _mapper
        -DynamicThemeEngine _theme_engine
        -DatasetSelector _selector
        -HypothesisLibrary _library
        -GenerationModeRouter _router
        -HypothesisSelector _hyp_selector
        -ExpressionFamilySelector _expr_selector
        -FieldSelector _field_selector
        -ContextAdapter _adapter
        +__init__(loader, mapper, theme_engine, selector, library, ratio_str)
        +generate(count, dataset_id) list~Candidate~
        +update_context(fields, operators) None
        +set_dataset(dataset_id) None
        +set_experience_guidance(patterns) None
        -_generate_hypothesis_driven(dataset_id) Candidate
        -_generate_experience_feedback(dataset_id) Candidate
        -_generate_random_exploration(dataset_id) Candidate
        -_build_expression(family, fields, windows) str
        -_attach_meta(candidate, meta) Candidate
    }

    HypothesisDrivenGenerator "1" *-- "1" GenerationModeRouter
    HypothesisDrivenGenerator "1" *-- "1" HypothesisSelector
    HypothesisDrivenGenerator "1" *-- "1" ExpressionFamilySelector
    HypothesisDrivenGenerator "1" *-- "1" FieldSelector
    HypothesisDrivenGenerator "1" *-- "1" ContextAdapter

    HypothesisSelector ..> HypothesisLibrary : queries
    FieldSelector ..> DatasetSelector : queries

    %% ── Existing Modules (unchanged) ──
    class Candidate {
        +str alpha_id
        +str expression
        +str family
        +str hypothesis
        +list~str~ data_fields
        +list~str~ operators
        +list~str~ source_tags
        +str template_source
        +str dataset_id
        +dict local_quality
        +dict validation
        +str lifecycle_status
        +str created_at
    }

    class CandidateGenerator {
        +generate(count, dataset_id) list~Candidate~
        +update_context(fields, operators)
        +set_dataset(dataset_id)
        +set_experience_guidance(patterns)
    }

    class DynamicThemeEngine {
        +generate(dataset_id, n) list~ThemeTemplate~
        +mutate_expression(expr, dataset_id, seed) str
        +build_categories()
    }

    class DatasetSelector {
        +initialize(loader)
        +select(strategy) list~str~
        +get_fields_by_category(category) list~str~
    }

    HypothesisDrivenGenerator ..|> CandidateGenerator : compatible interface
    HypothesisDrivenGenerator ..> DynamicThemeEngine : fallback
    HypothesisDrivenGenerator ..> Candidate : produces
